# routes/meals.js
@@ -1,6 +1,6 @@
 const routes = require("express").Router()
 const controller = require("../controllers/meals")
-const {workoutValidation} = require("../validator/validate")
+const {mealValidation} = require("../validator/validate")
 
 // const swaggerUi = require('swagger-ui-express');
 // const swaggerDocument = require('./swagger.json');
@@ -8,14 +8,14 @@ const {workoutValidation} = require("../validator/validate")
 // routes.use('/api-docs', swaggerUi.serve);
 // routes.get('/api-docs', swaggerUi.setup(swaggerDocument));
 
-routes.get("/meals", controller.getAll)
+routes.get("/", controller.getAll)
 
-routes.get("/meals/:id", controller.getSingle)
+routes.get("/:id", controller.getSingle)
 
-routes.post("/meals", workoutValidation, controller.addMeal)
+routes.post("/", mealValidation, controller.addMeal)
 
-routes.put("/meals/:id", workoutValidation, controller.updateMeal)
+routes.put("/:id", mealValidation, controller.updateMeal)
 
-routes.delete("/meals/:id", controller.deleteMeal)
+routes.delete("/:id", controller.deleteMeal)
 
 module.exports = routes
